--- a/index.html
+++ b/index.html
@@ -1,97 +1,93 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>CV Federico Di Fusco</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
 
-    <div class="header">
+<head>
+  <meta charset="utf-8">
+  <title>CV Federico Di Fusco</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 
-      <h2 style="padding-top:6mm;">FEDERICO DI FUSCO</h2>
-      <p style="color:rgb(120,120,120);
+<body>
+
+  <div class="header">
+
+    <h2 style="padding-top:6mm;">FEDERICO DI FUSCO</h2>
+    <p style="color:rgb(120,120,120);
       margin-top:0mm;">SOFTWARE DEVELOPER</p>
 
+  </div>
+
+  <img src="images/fotoCV2.png" alt="fdf profile picture">
+
+  <div class="row">
+    <div class="colomn left">
+
+      <p class="titolo">Info</p>
+      <hr>
+      <ul class="testo">
+        <li>federico.difusco@gmail.com</li>
+        <li>334 5022573</li>
+        <li>Padova, 35125</li>
+      </ul>
+      <p class="titolo">Profile</p>
+      <hr>
+      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">
+        Motivated, curious and proactive developer.<br>
+        Strong determination to learn and professional growth, constant search for improvement focused on achieving
+        goals.<br>
+        Good communication skills and willingness to work in a team.
+      </p>
+
+      <p class="titolo">Additional Information</p>
+      <hr>
+      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">willing to:</p>
+      <ul class="testo">
+        <li>move abroad to work</li>
+        <li>make new friends</li>
+        <li>learn new language</li>
+        <li>learn new skills</li>
+      </ul>
+      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">Enthusiast about:</p>
+      <ul class="testo">
+        <li>technology</li>
+        <li>basket</li>
+        <li>homebrewing</li>
+
     </div>
 
-    <img src="images/fotoCV2.png" alt="fdf profile picture">
+    <div class="colomn right">
 
-    <div class="row">
-      <div class="colomn left">
-
-        <p class="titolo">Info</p>
-        <hr>
-        <ul class="testo">
-          <li>Padova, 35125</li>
-          <li>federico.difusco@gmail.com</li>
-          <li>334 5022573</li>
-        </ul>
-        <p class="titolo">Profile</p>
-        <hr>
-        <p class="testo"
-        style="margin-top:0;margin-bottom:0;margin-left:3mm;"
-        >
-          Motivated, curious and proactive developer.<br>
-          Strong determination to learn and professional growth, constant search for improvement focused on achieving goals.<br>
-          Good communication skills and willingness to work in a team.
-        </p>
-
-        <p class="titolo">Additional Information</p>
-        <hr>
-        <p class="testo"
-        style="margin-top:0;margin-bottom:0;margin-left:3mm;"
-        >Enthusiast about:</p>
-        <ul class="testo">
-          <li>technology</li>
-          <li>basket</li>
-          <li>homebrewing</li>
-        </ul>
-
-      </div>
-
-      <div class="colomn right">
-
-        <p class="titolo">Skills</p>
-        <hr>
-
-        <ul class="testo">
-          <li><span style="font-weight:bold;">Coding languages:</span> Java, SQL, HTML/CSS, Javascript, Python, Bash</li>
-          <li><span style="font-weight:bold;">Framework:</span> Spring-Boot, AngularJS, bootstrap</li>
-          <li><span style="font-weight:bold;">Software:</span> IntelliJ, Eclipse, Visual Studio Code</li>
-        </ul>
-
-
-        <p class="titolo">Work Experiences</p>
-        <hr>
-        <ul class="testo">
-          <li><span style="font-weight:bold;">Software developer:</span><br>
-          Accenture, september 2020 - today <br>
+      <p class="titolo">Work Experiences</p>
+      <hr>
+      <ul class="testo">
+        <li><span style="font-weight:bold;">Software developer:</span> <br>
+          Young Platform, july 2022 - now <br>
+          Backend developer, C# .NET SQL MongoDB Docker</li>
+        <li><span style="font-weight:bold;">Software developer:</span><br>
+          Accenture, september 2020 - june 2022 <br>
           Developing, testing e maintenance using various programming languages ​​according to customer needs</li>
-          <li><span style="font-weight:bold;">3D printing Stage:</span> <br>
-          Electrolux, september 2019 - march 2020</li>
-        </ul>
+      </ul>
 
-        <p class="titolo">Education</p>
-        <hr>
-        <p class="testo"
-        style="margin-top:0;margin-bottom:0;margin-left:3mm;font-weight:bold;"
-        >Università degli Studi di Padova:</p>
-        <ul class="testo">
-          <li>2020: Laurea Magistrale in Ingegneria dell'Innovazione del Prodotto</li>
-          <li>2017: Laurea triennale in Ingegneria Meccanica</li>
-        </ul>
+      <p class="titolo">Education</p>
+      <hr>
+      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;font-weight:bold;">Università degli Studi di
+        Padova:</p>
+      <ul class="testo">
+        <li>2020: Master's degree in Ingegneria dell'Innovazione del Prodotto</li>
+        <li>2017: Bachelor degree in Ingegneria Meccanica</li>
+      </ul>
 
-        <p class="titolo">Languages</p>
-        <hr>
-        <ul class="testo">
-          <li><span style="font-weight:bold;">Italian:</span> native</li>
-          <li><span style="font-weight:bold;">English:</span> B2</li>
-        </ul>
-
-      </div>
+      <p class="titolo">Languages</p>
+      <hr>
+      <ul class="testo">
+        <li><span style="font-weight:bold;">Italian:</span> native</li>
+        <li><span style="font-weight:bold;">English:</span> professional</li>
+      </ul>
 
     </div>
 
-  </body>
+  </div>
+
+</body>
+
 </html>
