--- a/index.html
+++ b/index.html
@@ -42,30 +42,34 @@
       <hr>
       <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">willing to:</p>
       <ul class="testo">
-        <li>move abroad to work</li>
-        <li>make new friends</li>
+        <li>move abroad</li>
         <li>learn new language</li>
         <li>learn new skills</li>
       </ul>
       <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">Enthusiast about:</p>
       <ul class="testo">
-        <li>technology</li>
-        <li>basket</li>
+        <li>finance</li>
         <li>homebrewing</li>
-
+        <li>technology</li>
     </div>
 
     <div class="colomn right">
+
+      <!--> hard skill: microservices architecture, database, back-end <-->
 
       <p class="titolo">Work Experiences</p>
       <hr>
       <ul class="testo">
         <li><span style="font-weight:bold;">Software developer:</span> <br>
           Young Platform, july 2022 - now <br>
-          Backend developer, C# .NET SQL MongoDB Docker</li>
+          Back-end developer in the data team using C# with .NET, SQL, MongoDB, Docker.
+          Developing, testing and maintaining mainly an internale management software and the datawarehouse.
+        </li>
         <li><span style="font-weight:bold;">Software developer:</span><br>
           Accenture, september 2020 - june 2022 <br>
-          Developing, testing e maintenance using various programming languages ​​according to customer needs</li>
+          Back-end developer consultant for an italian bank using Java with Spring Boot, SQL, MongoDB, bash.
+          Sometimes I used Angular for the front-end.
+          Developing, testing and maintaining multiple projects according to customer's requirements</li>
       </ul>
 
       <p class="titolo">Education</p>
