--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="colomn right">
 
-      <!--> hard skill: microservices architecture, database, back-end <-->
+      <!-- hard skill: microservices architecture, database, back-end -->
 
       <p class="titolo">Work Experiences</p>
       <hr>
