--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
 
     <div class="colomn right">
 
-      <!-- hard skill: microservices architecture, database, back-end -->
+      <p class="titolo">Skill</p>
+      <hr>
+      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;font-weight:bold;">microservices architecture
+      </p>
+      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;font-weight:bold;">database
+      </p>
+      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;font-weight:bold;">coding
+      </p>
 
       <p class="titolo">Work Experiences</p>
       <hr>
