--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <div class="header">
 
-    <h2 style="padding-top:6mm;">FEDERICO DI FUSCO</h2>
-    <p style="color:rgb(120,120,120);
+    <h2 style="color:white;padding-top:15mm;">FEDERICO DI FUSCO</h2>
+    <p style="color:white;
       margin-top:0mm;">SOFTWARE DEVELOPER</p>
 
   </div>
@@ -21,79 +21,65 @@
 
   <div class="row">
     <div class="colomn left">
-
-      <p class="titolo">Info</p>
+      <p class="titolo">My Contact</p>
       <hr>
-      <ul class="testo">
-        <li>federico.difusco@gmail.com</li>
-        <li>334 5022573</li>
-        <li>Padova, 35125</li>
-      </ul>
-      <p class="titolo">Profile</p>
-      <hr>
-      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">
-        Motivated, curious and proactive developer.<br>
-        Strong determination to learn and professional growth, constant search for improvement focused on achieving
-        goals.<br>
-        Good communication skills and willingness to work in a team.
-      </p>
-
-      <p class="titolo">Additional Information</p>
-      <hr>
-      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">willing to:</p>
-      <ul class="testo">
-        <li>move abroad</li>
-        <li>learn new language</li>
-        <li>learn new skills</li>
-      </ul>
-      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">Enthusiast about:</p>
-      <ul class="testo">
-        <li>finance</li>
-        <li>homebrewing</li>
-        <li>technology</li>
-    </div>
-
-    <div class="colomn right">
-
-      <p class="titolo">Skill</p>
-      <hr>
-      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;font-weight:bold;">microservices architecture
-      </p>
-      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;font-weight:bold;">database
-      </p>
-      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;font-weight:bold;">coding
-      </p>
-
-      <p class="titolo">Work Experiences</p>
-      <hr>
-      <ul class="testo">
-        <li><span style="font-weight:bold;">Software developer:</span> <br>
-          Young Platform, july 2022 - now <br>
-          Back-end developer in the data team using C# with .NET, SQL, MongoDB, Docker.
-          Developing, testing and maintaining mainly an internale management software and the datawarehouse.
-        </li>
-        <li><span style="font-weight:bold;">Software developer:</span><br>
-          Accenture, september 2020 - june 2022 <br>
-          Back-end developer consultant for an italian bank using Java with Spring Boot, SQL, MongoDB, bash.
-          Sometimes I used Angular for the front-end.
-          Developing, testing and maintaining multiple projects according to customer's requirements</li>
-      </ul>
+      <p class="testo">&#9993 federico.difusco@gmail.com</p>
+      <br>
+      <p class="testo">+39 334 5022573</p>
+      <br>
+      <p class="testo">Padova, 35125</p>
 
       <p class="titolo">Education</p>
       <hr>
-      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;font-weight:bold;">Università degli Studi di
-        Padova:</p>
+      <p class="testo"><span class="sottotitolo">Università degli Studi di Padova:</span></p>
       <ul class="testo">
-        <li>2020: Master's degree in Ingegneria dell'Innovazione del Prodotto</li>
-        <li>2017: Bachelor degree in Ingegneria Meccanica</li>
+        <li>2020: Master's degree in Innovation Product Engineering</li>
+        <li>2017: Bachelor degree in Mechanical Engineering</li>
       </ul>
 
       <p class="titolo">Languages</p>
       <hr>
-      <ul class="testo">
-        <li><span style="font-weight:bold;">Italian:</span> native</li>
-        <li><span style="font-weight:bold;">English:</span> professional</li>
-      </ul>
+      <p class="testo">Italian: native</p>
+      <br>
+      <p class="testo">English: professional</p>
+
+    </div>
+
+    <div class="colomn center">
+      <p></p>
+    </div>
+
+    <div class="colomn right">
+
+      <p class="titolo">About me</p>
+      <hr>
+      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">
+        My passion are in finance, technology and homebrewing.
+        I'm willing to move abroad to make new experiences, learn new languages and skills
+      </p>
+      <p class="testo">microservices architecture
+      </p>
+      <p class="testo">database
+      </p>
+
+      <p class="titolo">Professional Experiences</p>
+      <hr>
+      <br>
+      <span class="sottotitolo">Young Platform | Software developer:</span>
+      <p class="testo">
+        <br>
+        july 2022 - now <br>
+        Back-end developer in the data team using C# with .NET, SQL, MongoDB, Docker.
+        Developing, testing and maintaining mainly an internale management software and the datawarehouse.
+      </p>
+      <br><br>
+      <span class="sottotitolo">Accenture | Software developer:</span>
+      <p class="testo"><br>
+        september 2020 - june 2022 <br>
+        Back-end developer consultant for an italian bank using Java with Spring Boot, SQL, MongoDB, bash.
+        Sometimes I used Angular for the front-end.
+        Developing, testing and maintaining multiple projects according to customer's requirements
+      </p>
 
     </div>
 
