--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
   <meta charset="utf-8">
   <title>CV Federico Di Fusco</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-
   <div class="header">
-
-    <h2 style="color:white;padding-top:15mm;">FEDERICO DI FUSCO</h2>
-    <p style="color:white;
-      margin-top:0mm;">SOFTWARE DEVELOPER</p>
-
+    <p style="padding-top:18mm;font-size: 28pt;margin: 0;">FEDERICO DI FUSCO</p>
+    <p style="font-size: 22pt;margin: 0;">Software Developer</p>
   </div>
 
   <img src="images/fotoCV2.png" alt="fdf profile picture">
@@ -23,25 +20,30 @@
     <div class="colomn left">
       <p class="titolo">My Contact</p>
       <hr>
-      <p class="testo">&#9993 federico.difusco@gmail.com</p>
+      <p class="testo"><i class="fa fa-envelope"></i><br>federico.difusco@gmail.com</p>
       <br>
-      <p class="testo">+39 334 5022573</p>
+      <p class="testo"><i class="fa fa-phone"></i><br>+39 334 5022573</p>
       <br>
-      <p class="testo">Padova, 35125</p>
+      <p class="testo"><i class="fa fa-map-marker"></i><br>Padua, 35125</p>
+
+      <br>
 
       <p class="titolo">Education</p>
       <hr>
-      <p class="testo"><span class="sottotitolo">Università degli Studi di Padova:</span></p>
-      <ul class="testo">
-        <li>2020: Master's degree in Innovation Product Engineering</li>
-        <li>2017: Bachelor degree in Mechanical Engineering</li>
-      </ul>
+      <p class="sottotitolo">Università degli Studi di Padova:</p>
+      <p class="testo">
+        2020: Master's degree in Innovation Product Engineering
+        <br><br>
+        2017: Bachelor's degree in Mechanical Engineering
+      </p>
 
-      <p class="titolo">Languages</p>
-      <hr>
-      <p class="testo">Italian: native</p>
       <br>
-      <p class="testo">English: professional</p>
+
+      <p class="titolo">Language</p>
+      <hr>
+      <p class="testo">Italian</p>
+      <br>
+      <p class="testo">English</p>
 
     </div>
 
@@ -54,37 +56,41 @@
       <p class="titolo">About me</p>
       <hr>
       <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">
-        My passion are in finance, technology and homebrewing.
-        I'm willing to move abroad to make new experiences, learn new languages and skills
-      </p>
-      <p class="testo">microservices architecture
-      </p>
-      <p class="testo">database
+        Friendly neighborhood software developer. <br>
+        My passions are finance, cooking, homebrewing and basketball. <br>
+        I'm willing to make new experiences and eager to learn new languages and skills
       </p>
 
-      <p class="titolo">Professional Experiences</p>
-      <hr>
       <br>
-      <span class="sottotitolo">Young Platform | Software developer:</span>
-      <p class="testo">
+
+      <p class="titolo">Professional Experience</p>
+      <hr>
+      <p class="sottotitolo">Young Platform | Software Engineer:
         <br>
-        july 2022 - now <br>
-        Back-end developer in the data team using C# with .NET, SQL, MongoDB, Docker.
-        Developing, testing and maintaining mainly an internale management software and the datawarehouse.
+        July 2022 - Present
       </p>
-      <br><br>
-      <span class="sottotitolo">Accenture | Software developer:</span>
-      <p class="testo"><br>
-        september 2020 - june 2022 <br>
-        Back-end developer consultant for an italian bank using Java with Spring Boot, SQL, MongoDB, bash.
-        Sometimes I used Angular for the front-end.
-        Developing, testing and maintaining multiple projects according to customer's requirements
+      <p class="testo">
+        Back-end developer in the data team using C#, .NET 6, SQL, MongoDB, Docker;
+        <br>
+        Design, develop, test and maintain the internal management software and the datawarehouse
+      </p>
+      <br>
+      <p class="sottotitolo">Accenture | Software Developer:
+        <br>
+        September 2020 - June 2022
+      </p>
+      <p class="testo">
+        Back-end developer consultant for an italian bank using Java, Spring Boot, SQL, MongoDB;
+        <br>
+        Develop, test and maintain multiple projects according to customer's requirements
       </p>
 
     </div>
 
   </div>
 
+  <div class="footer">
+  </div>
 </body>
 
 </html>
