--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
       <p class="testo"><i class="fa fa-envelope"></i><br>federico.difusco@gmail.com</p>
       <br>
       <p class="testo"><i class="fa fa-phone"></i><br>+39 334 5022573</p>
-      <br>
-      <p class="testo"><i class="fa fa-map-marker"></i><br>Padua, 35125</p>
 
       <br>
 
@@ -65,7 +63,7 @@
 
       <p class="titolo">Professional Experience</p>
       <hr>
-      <p class="sottotitolo">Young Platform | Software Engineer:
+      <p class="sottotitolo">Young Platform | Software Engineer
         <br>
         July 2022 - Present
       </p>
@@ -75,12 +73,12 @@
         Design, develop, test and maintain the internal management software and the datawarehouse
       </p>
       <br>
-      <p class="sottotitolo">Accenture | Software Developer:
+      <p class="sottotitolo">Accenture | Software Developer
         <br>
         September 2020 - June 2022
       </p>
       <p class="testo">
-        Back-end developer consultant for an italian bank using Java, Spring Boot, SQL, MongoDB;
+        Back-end developer in bank sector using Java, Spring Boot, SQL, MongoDB;
         <br>
         Develop, test and maintain multiple projects according to customer's requirements
       </p>
