--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <p class="testo"><i class="fa fa-envelope"></i><br>federico.difusco@gmail.com</p>
       <br>
       <p class="testo"><i class="fa fa-phone"></i><br>+39 334 5022573</p>
+      <br>
+      <p class="testo"><i class="fa fa-github"></i><br>https://github.com/fededifu</p>
+
 
       <br>
 
@@ -37,7 +40,7 @@
 
       <br>
 
-      <p class="titolo">Language</p>
+      <p class="titolo">Languages</p>
       <hr>
       <p class="testo">Italian</p>
       <br>
@@ -51,7 +54,7 @@
 
     <div class="colomn right">
 
-      <p class="titolo">About me</p>
+      <!-- <p class="titolo">About me</p>
       <hr>
       <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">
         Friendly neighborhood software developer. <br>
@@ -59,7 +62,7 @@
         I'm willing to make new experiences and eager to learn new languages and skills
       </p>
 
-      <br>
+      <br> -->
 
       <p class="titolo">Professional Experience</p>
       <hr>
@@ -68,9 +71,9 @@
         July 2022 - Present
       </p>
       <p class="testo">
-        Back-end developer in the data team using C#, .NET 6, SQL, MongoDB, Docker;
+        Back-end Software Engineer
         <br>
-        Design, develop, test and maintain the internal management software and the datawarehouse
+        C#, .NET 6, Go, SQL, MongoDB, Docker;
       </p>
       <br>
       <p class="sottotitolo">Accenture | Software Developer
@@ -78,10 +81,27 @@
         September 2020 - June 2022
       </p>
       <p class="testo">
-        Back-end developer in bank sector using Java, Spring Boot, SQL, MongoDB;
+        Back-end developer in bank sector
         <br>
-        Develop, test and maintain multiple projects according to customer's requirements
+        Java, Spring Boot, SQL, MongoDB
       </p>
+
+      <br>
+
+      <p class="titolo">Projects</p>
+      <hr>
+      <p class="sottotitolo">Learning project</p>
+      <p class="testo">
+        The aim concern to accumulate knowledge and share it with everyone else,
+        it's currently focused on DSA (data structure and algorithms)
+      </p>
+      <br>
+      <p class="sottotitolo">Snippet collection</p>
+      <p class="testo">
+        Snippets of code and projects that may be useful or interesting
+      </p>
+
+      <br>
 
     </div>
 
