--- a/index.html
+++ b/index.html
@@ -10,85 +10,86 @@
 
 <body>
   <div class="header">
-    <p style="padding-top:18mm;font-size: 28pt;margin: 0;">FEDERICO DI FUSCO</p>
-    <p style="font-size: 22pt;margin: 0;">Software Developer</p>
+    <p style="padding-top:10mm;font-size: 28pt;margin: 0;">FEDERICO DI FUSCO</p>
+    <p style="font-size: 22pt;margin: 0;">Backend Developer</p>
+    <!-- <img src="images/fotoCV2.png" alt="fdf profile picture"> -->
   </div>
 
-  <img src="images/fotoCV2.png" alt="fdf profile picture">
 
-  <div class="row">
-    <div class="colomn left">
-      <p class="titolo">My Contact</p>
-      <hr>
-      <p class="testo"><i class="fa fa-envelope"></i><br>federico.difusco@gmail.com</p>
-      <br>
-      <p class="testo"><i class="fa fa-phone"></i><br>+39 334 5022573</p>
-      <br>
-      <p class="testo"><i class="fa fa-github"></i><br>https://github.com/fededifu</p>
+  <!-- <div class="contact">
+    <p>
+      <i class="fa fa-envelope"></i> federico.difusco@gmail.com |
+      <i class="fa fa-phone"></i> +39 3345022573 |
+      <i class="fa fa-github"></i> <a href="https://github.com/fededifu">github</a>
+    </p>
+  </div> -->
 
 
-      <br>
+  <p class="titolo">Professional Experience</p>
+  <hr style="width:75mm">
+  <p class="sottotitolo">
+    Backend Software Engineer | Young Platform
+    <br>
+    July 2022 - Present
+  </p>
+  <ul class="testo">
+    <li>
+      Write web service APIs to support web frontend clients, using C# (.NET and EF core) and Golang
+    </li>
+    <li>
+      Develop jobs using C#, Golang, Postgres, SqlServer, MongoDB, Redis, Kafka, Git, Docker
+    </li>
+    <li>
+      Design, implement and testing new cross-projects features and enhancements from spec to production and ongoing
+      operations at scale
+    </li>
+    <li>
+      Review code and technical designs produced by other engineers
+    </li>
+  </ul>
 
-      <p class="titolo">Education</p>
-      <hr>
-      <p class="sottotitolo">Università degli Studi di Padova:</p>
-      <p class="testo">
-        2020: Master's degree in Innovation Product Engineering
-        <br><br>
-        2017: Bachelor's degree in Mechanical Engineering
-      </p>
+  <br>
 
-      <br>
+  <p class="sottotitolo">
+    Software Developer | Accenture
+    <br>
+    September 2020 - June 2022
+  </p>
+  <ul class="testo">
+    <li>
+      Write web service APIs to support web frontend clients, using Java
+    </li>
+    <li>
+      Maintain and testing 3 backend microservices
+    </li>
+  </ul>
 
-      <p class="titolo">Languages</p>
-      <hr>
-      <p class="testo">Italian</p>
-      <br>
-      <p class="testo">English</p>
+  <!-- <p class="testo">
+    Back-end developer in bank sector
+    <br>
+    Java, Spring Boot, SQL, MongoDB
+  </p> -->
 
-    </div>
 
-    <div class="colomn center">
-      <p></p>
-    </div>
+  <p class="titolo">Education</p>
+  <hr style="width:30mm">
+  <p class="sottotitolo">Università degli Studi di Padova:</p>
+  <p class="testo">
+    2020: Master's degree in Innovation Product Engineering
+    <br><br>
+    2017: Bachelor's degree in Mechanical Engineering
+  </p>
 
-    <div class="colomn right">
 
-      <!-- <p class="titolo">About me</p>
-      <hr>
-      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">
-        Friendly neighborhood software developer. <br>
-        My passions are finance, cooking, homebrewing and basketball. <br>
-        I'm willing to make new experiences and eager to learn new languages and skills
-      </p>
+  <p class="titolo">Languages</p>
+  <hr style="width:30mm">
+  <p class="testo">Italian: native</p>
+  <p class="testo">English: professional</p>
+  <p class="testo">French: learning</p>
 
-      <br> -->
+  <br>
 
-      <p class="titolo">Professional Experience</p>
-      <hr>
-      <p class="sottotitolo">Young Platform | Software Engineer
-        <br>
-        July 2022 - Present
-      </p>
-      <p class="testo">
-        Back-end Software Engineer
-        <br>
-        C#, .NET 6, Go, SQL, MongoDB, Docker;
-      </p>
-      <br>
-      <p class="sottotitolo">Accenture | Software Developer
-        <br>
-        September 2020 - June 2022
-      </p>
-      <p class="testo">
-        Back-end developer in bank sector
-        <br>
-        Java, Spring Boot, SQL, MongoDB
-      </p>
-
-      <br>
-
-      <p class="titolo">Projects</p>
+  <!-- <p class="titolo">Projects</p>
       <hr>
       <p class="sottotitolo">Learning project</p>
       <p class="testo">
@@ -101,10 +102,15 @@
         Snippets of code and projects that may be useful or interesting
       </p>
 
-      <br>
+      <br> -->
 
-    </div>
 
+  <div class="contact">
+    <p>
+      <i class="fa fa-envelope"></i> federico.difusco@gmail.com |
+      <i class="fa fa-phone"></i> +39 3345022573 |
+      <i class="fa fa-github"></i> <a href="https://github.com/fededifu">github</a>
+    </p>
   </div>
 
 </body>
