--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <hr style="width:30mm">
   <p class="testo">Italian: native</p>
   <p class="testo">English: professional</p>
-  <p class="testo">French: learning</p>
+  <!-- <p class="testo">French: learning</p> -->
 
   <br>
 
