--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <hr>
       <p class="sottotitolo">Young Platform | Software Engineer
         <br>
-        July 2022 - Present
+        July 2022 - July 2023
       </p>
       <p class="testo">
         Back-end Software Engineer
