--- a/index.html
+++ b/index.html
@@ -1,112 +1,121 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>CV Federico Di Fusco</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Federico Di Fusco - CV</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
 </head>
-
 <body>
-  <div class="header">
-    <p style="padding-top:18mm;font-size: 28pt;margin: 0;">FEDERICO DI FUSCO</p>
-    <p style="font-size: 22pt;margin: 0;">Software Developer</p>
-  </div>
+    <div class="container">
+        <header>
+            <h1>Federico Di Fusco</h1>
+            <p>Email: <a href="mailto:federico.difusco@gmail.com">federico.difusco@gmail.com</a></p>
+            <p>Phone: +32 (0)472084593</p>
+            <p>Address: Rue du Rewe 10, 4000, Liége, Belgium</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/federico-di-fusco-657b1615b/">linkedin.com/in/federico-di-fusco</a></p>
+            <p>GitHub: <a href="https://github.com/federico-difusco">github.com/federico-difusco</a></p>
+        </header>
+        
+        <section>
+            <h2>Professional Summary</h2>
+            <p>Experienced Software Engineer with over 4 years in software development, 
+                specializing in scalable microservices and REST APIs. 
+                Effective in Golang with experience in Docker. 
+                Strong background in agile methodologies and unit testing. 
+                Highly flexible, with the ability to learn and adapt quickly to new technologies and environments. 
+                Passionate about tackling challenges and finding innovative solutions. 
+                Fluent in English with basic French proficiency.</p>
+        </section>
 
-  <img src="images/fotoCV2.png" alt="fdf profile picture">
+        <!-- <section>
+            <h2>Technical Skills</h2>
+            <ul>
+                <li><strong>Programming Languages:</strong> Golang, .NET, Java</li>
+                <li><strong>Frameworks and Tools:</strong> Git, Redis, MongoDB, Postgres, Kafka, Docker, AWS</li>
+                <li><strong>Methodologies:</strong> Agile Scrum</li>
+                <li><strong>Languages:</strong> Italian (native), English (C1), French (B1)</li>
+            </ul>
+        </section> -->
 
-  <div class="row">
-    <div class="colomn left">
-      <p class="titolo">My Contact</p>
-      <hr>
-      <p class="testo"><i class="fa fa-envelope"></i><br>federico.difusco@gmail.com</p>
-      <br>
-      <p class="testo"><i class="fa fa-phone"></i><br>+39 334 5022573</p>
-      <br>
-      <p class="testo"><i class="fa fa-github"></i><br>https://github.com/fededifu</p>
+        <section>
+            <h2>Professional Experience</h2>
+            
+            <div class="job">
+                <h3>Software Engineer</h3>
+                <h4>Lansweeper, Merelbeke, Belgium</h4>
+                <h5>December 2023 – Present</h5>
+                <ul>
+                    <li>Developed, tested, and maintained applications.</li>
+                    <li>Researched new features across multiple OS (Windows, Linux, Mac).</li>
+                    <li>Collaborated with cross-functional teams to meet project requirements.</li>
+                    <li>Contributed to scalable and reliable system architecture.</li>
+                    <li>Conducted architectural reviews and provided feedback.</li>
+                    <li>Reviewed code and mentored junior engineers.</li>
+                    <li><strong>Technologies:</strong> .NET, Sqlite, Blazor, Docker, MongoDB, Git, Go, Rust.</li>
+                    <li><strong>Methodology:</strong> Agile Scrum.</li>
+                </ul>
+            </div>
 
+            <div class="job">
+                <h3>Software Engineer</h3>
+                <h4>Young Platform, Turin, Italy</h4>
+                <h5>July 2022 – July 2023</h5>
+                <ul>
+                    <li>Developed and maintained backend projects, focusing on scalability.</li>
+                    <li>Gathered requirements to address recurring problems.</li>
+                    <li>Designed, implemented, and tested new features.</li>
+                    <li>Reviewed code and technical designs.</li>
+                    <li><strong>Technologies:</strong> .NET, Golang, Postgres, MongoDB, Redis, Git, Docker, Kafka, AWS.</li>
+                    <li><strong>Methodology:</strong> Agile Scrum.</li>
+                </ul>
+            </div>
 
-      <br>
+            <div class="job">
+                <h3>Software Developer</h3>
+                <h4>Accenture, Padova, Italy</h4>
+                <h5>September 2020 – June 2022</h5>
+                <ul>
+                    <li>Developed and maintained core projects.</li>
+                    <li>Collected and analyzed client requirements.</li>
+                    <li>Ensured data consistency across multiple databases.</li>
+                    <li>Coached new colleagues and wrote documentation.</li>
+                    <li><strong>Technologies:</strong> Java, Spring Boot, MySQL, MongoDB, Postgres, Redis, Kafka, Git, Jenkins, Sonar.</li>
+                </ul>
+            </div>
+        </section>
 
-      <p class="titolo">Education</p>
-      <hr>
-      <p class="sottotitolo">Università degli Studi di Padova:</p>
-      <p class="testo">
-        2020: Master's degree in Innovation Product Engineering
-        <br><br>
-        2017: Bachelor's degree in Mechanical Engineering
-      </p>
+        <section>
+            <h2>Education</h2>
+            <div class="education">
+                <h3>Master's Degree in Innovation Product Engineering</h3>
+                <h4>Università degli Studi di Padova, Italy</h4>
+                <h5>October 2017 – March 2020</h5>
+            </div>
+            <div class="education">
+                <h3>Bachelor's Degree in Mechanical Engineering</h3>
+                <h4>Università degli Studi di Padova, Italy</h4>
+                <h5>October 2014 – September 2017</h5>
+            </div>
+        </section>
 
-      <br>
+        <!-- <section>
+            <h2>Certifications</h2>
+            <ul>
+                <li>Certified Kubernetes Administrator (CKA)</li>
+                <li>AWS Certified Solutions Architect</li>
+            </ul>
+        </section> -->
 
-      <p class="titolo">Languages</p>
-      <hr>
-      <p class="testo">Italian</p>
-      <br>
-      <p class="testo">English</p>
-
+        <!-- <section>
+            <h2>Additional Information</h2>
+            <ul>
+                <li>love cooking</li>
+                <li>a me me piace a nutella</li>
+            </ul>
+        </section> -->
     </div>
-
-    <div class="colomn center">
-      <p></p>
-    </div>
-
-    <div class="colomn right">
-
-      <!-- <p class="titolo">About me</p>
-      <hr>
-      <p class="testo" style="margin-top:0;margin-bottom:0;margin-left:3mm;">
-        Friendly neighborhood software developer. <br>
-        My passions are finance, cooking, homebrewing and basketball. <br>
-        I'm willing to make new experiences and eager to learn new languages and skills
-      </p>
-
-      <br> -->
-
-      <p class="titolo">Professional Experience</p>
-      <hr>
-      <p class="sottotitolo">Young Platform | Software Engineer
-        <br>
-        July 2022 - July 2023
-      </p>
-      <p class="testo">
-        Back-end Software Engineer
-        <br>
-        C#, .NET 6, Go, SQL, MongoDB, Docker;
-      </p>
-      <br>
-      <p class="sottotitolo">Accenture | Software Developer
-        <br>
-        September 2020 - June 2022
-      </p>
-      <p class="testo">
-        Back-end developer in bank sector
-        <br>
-        Java, Spring Boot, SQL, MongoDB
-      </p>
-
-      <br>
-
-      <p class="titolo">Projects</p>
-      <hr>
-      <p class="sottotitolo">Learning project</p>
-      <p class="testo">
-        The aim concern to accumulate knowledge and share it with everyone else,
-        it's currently focused on DSA (data structure and algorithms)
-      </p>
-      <br>
-      <p class="sottotitolo">Snippet collection</p>
-      <p class="testo">
-        Snippets of code and projects that may be useful or interesting
-      </p>
-
-      <br>
-
-    </div>
-
-  </div>
-
 </body>
-
 </html>
